--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,19 +1,72 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {# Run `composer require symfony/webpack-encore-bundle`
-           and uncomment the following Encore helpers to start using Symfony UX #}
-        {% block stylesheets %}
-            {#{{ encore_entry_link_tags('app') }}#}
-        {% endblock %}
 
-        {% block javascripts %}
-            {#{{ encore_entry_script_tags('app') }}#}
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
+<head>
+  <meta charset="UTF-8" />
+  <title>{% block title %}Welcome!{% endblock %}</title>
+  {% block stylesheets %}
+  <link rel="stylesheet" href="https://bootswatch.com/4/flatly/bootstrap.min.css" />
+  <link rel="stylesheet" type="text/css" href="template/style.css" />
+  {% endblock %}
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <a class="navbar-brand" href="#">ClemSite</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
+      aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarColor01">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#"> Top Movies <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Creer une Liste</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">My lists</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Favorites</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">About</a>
+        </li>
+      </ul>
+
+      <button type="button" class="btn btn-outline-primary">
+        {% if not app.user %}
+        <a href="#">Register</a>
+      </button>
+      <button type="button" class="btn btn-outline-primary">
+        <a href="#">Login</a>
+      </button>
+      {% else %}
+      <button type="button" class="btn btn-outline-primary">
+        <a href="#">My Profile</a>
+        <button type="button" class="btn btn-outline-primary">
+          <a href="#">Logout</a>
+        </button>
+        {% endif %}
+        <div class="searchbar">
+          <form action="#" class="form-inline my-2 my-lg-0" method="POST">
+            <input name="search" class="form-control mr-sm-2" type="text" placeholder="Search" />
+            <button class="btn btn-secondary my-2 my-sm-0" type="submit">
+              Search
+            </button>
+          </form>
+        </div>
+
+
+        -->
+    </div>
+  </nav>
+  <div class="container">
+    {% block body %}{% endblock %} {% block javascripts %}{% endblock %}
+  </div>
+</body>
+
 </html>
