adding register path in menu

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -39,7 +39,7 @@
 
       <button type="button" class="btn btn-outline-primary">
         {% if not app.user %}
-        <a href="#">Register</a>
+        <a href="{{path('app_register')}}">Register</a>
       </button>
       <button type="button" class="btn btn-outline-primary">
         <a href="#">Login</a>
