change AppAuthenticator to redirect on main when authentication success

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -42,7 +42,7 @@
         <a href="{{path('app_register')}}">Register</a>
       </button>
       <button type="button" class="btn btn-outline-primary">
-        <a href="#">Login</a>
+        <a href="{{path('app_login')}}">Login</a>
       </button>
       {% else %}
       <button type="button" class="btn btn-outline-primary">
