Change website title to My movie list

--- a/templates/app/index.html.twig
+++ b/templates/app/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %} {% block body %}
 <div>
-  <h1>Bienvenue sur le ClemSite</h1>
+  <h1>Bienvenue sur My movie list</h1>
   <p>
     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero, rem eligendi
     commodi ullam quas officiis porro, perspiciatis sequi voluptatem, nihil qui.
