--- a/templates/app/index.html.twig
+++ b/templates/app/index.html.twig
@@ -1,6 +1,18 @@
 {% extends 'base.html.twig' %} {% block body %}
 <div>
   <h1>Welcome to My movie List</h1>
+
+
+  {% for movie in trend_movies %}
+{% if movie.title is defined %}
+{{movie.title}}</br>
+	{% elseif movie.name is defined %}
+{{movie.name}}</br>
+{% endif %}
+
+  
+  
+  {% endfor %}
   <p>
     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero, rem eligendi
     commodi ullam quas officiis porro, perspiciatis sequi voluptatem, nihil qui.
