--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -64,8 +64,16 @@
         -->
     </div>
   </nav>
-  <div class="container">
-    {% block body %}{% endblock %} {% block javascripts %}{% endblock %}
+  <div class="container w-100">
+    {% block body %}{% endblock %} 
+    {% block javascripts %}
+	    {{ encore_entry_script_tags('app') }}
+
+	    <!-- Renders app.js & a webpack runtime.js file
+	              <script src="/build/runtime.js" defer></script>
+	              <script src="/build/app.js" defer></script>
+	              See note below about the "defer" attribute -->
+      {% endblock %}
   </div>
 </body>
 
