--- a/templates/partials/movie_card.html.twig
+++ b/templates/partials/movie_card.html.twig
@@ -1,5 +1,5 @@
 
-<article>
+<div>
 <div class="image">
 	<img src="{{ movie.image }}" alt=""/>
 </div>
@@ -8,4 +8,4 @@
 {% elseif movie.name is defined %}
     {{movie.name}}
 {% endif %}
-</article>
+</div>
