adding config for home.js in webpack config

--- a/templates/app/index.html.twig
+++ b/templates/app/index.html.twig
@@ -26,3 +26,9 @@
   </p>
 </div>
 {% endblock %}
+
+{% block javascripts %}
+	{{ parent() }}
+	{{ encore_entry_script_tags('home') }}
+{% endblock %}
+
