before passing to movie-lists

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,10 +24,10 @@
           <a class="nav-link" href="#"> Top Movies <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Creer une Liste</a>
+          <a class="nav-link" href="{{path('newMovieList')}}">Creer une Liste</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">My lists</a>
+          <a class="nav-link" href="{{path('showmylists')}}">My lists</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Favorites</a>
